--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,7 +2,8 @@
     <tr>
         <td><a href=".">Home</a></td>
         <td><a href="test_prep">Test Prep</a></td>
-        <td><a href="tpt">Challenges</a></td>
+        <td><a href="tpt">TPT Challenges</a></td>
+        <td><a href="python_work">Python Work</a></td>
         <td><a href="create_task">Create Task</a></td>
     </tr>
 </table>
