--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
 <table>
     <tr>
         <td><a href=".">Home</a></td>
-        <td><a href="test_prep">Test Prep</a></td>
+        <td><a href="tpt">Test Prep</a></td>
         <td><a href="python_work">Python Work</a></td>
         <td><a href="create_task">Create Task</a></td>
     </tr>
