--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,5 +4,7 @@
         <td><a href="tpt">Test Prep</a></td>
         <td><a href="python_work">Python Work</a></td>
         <td><a href="create_task">Create Task</a></td>
+        <td><a href="quiz_corrections">Final Quizzes</a></td>
+
     </tr>
 </table>
